--- a/baekjoon_2751.ipynb
+++ b/baekjoon_2751.ipynb
@@ -17,38 +17,17 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "oQ7f39a2zr0P",
-        "outputId": "f1bd692d-f67e-47be-f1a0-186a13dc396b"
+        "id": "oQ7f39a2zr0P"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "5\n",
-            "4\n",
-            "4\n",
-            "3\n",
-            "2\n",
-            "1\n",
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n",
-            "4\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "num = int(input())\n",
-        "ls = [0]*num\n",
+        "import sys\n",
+        "num = int(sys.stdin.readline())\n",
+        "ls = [0] * num\n",
         "for i in range(num):\n",
-        "    ls[i] = int(input())\n",
+        "    ls[i] = int(sys.stdin.readline())\n",
         "ls.sort()\n",
         "for i in range(num):\n",
         "    print(ls[i])"
