--- a/baekjoon_11652.ipynb
+++ b/baekjoon_11652.ipynb
@@ -17,46 +17,54 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "P-0wy-ODg6Ys",
-        "outputId": "2e75ecf4-eb62-4519-d545-21ee24c1962b"
+        "outputId": "a7da3ddb-351a-421e-b4cf-abd6044441b2"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "5\n",
+            "6\n",
             "1\n",
             "2\n",
             "1\n",
             "2\n",
             "1\n",
+            "2\n",
             "1\n"
           ]
         }
       ],
       "source": [
-        "num = int(input())\n",
+        "import sys\n",
+        "num = int(sys.stdin.readline())\n",
         "ls = []\n",
-        "for i in range(num):\n",
-        "    ls.append(int(input()))\n",
+        "dic = {}\n",
+        "for _ in range(num):\n",
+        "    x = sys.stdin.readline()\n",
+        "    ls.append(x)\n",
+        "    if x in dic.keys():\n",
+        "        dic[x] += 1\n",
+        "    else:\n",
+        "        dic[x] = 1\n",
         "keys = list(set(ls))\n",
         "max = 0\n",
         "dap = 0\n",
-        "for k in map(int,keys):\n",
-        "    if max < ls.count(k):\n",
-        "        max = ls.count(k)\n",
-        "        dap = k\n",
-        "    elif max == ls.count(k):\n",
-        "        if dap < k:\n",
+        "for k in keys:\n",
+        "    if max < dic[k]:\n",
+        "        max = dic[k]\n",
+        "        dap = int(k)\n",
+        "    elif max == dic[k]:\n",
+        "        if dap < int(k):\n",
         "            pass\n",
-        "        elif dap > k:\n",
-        "            dap = k\n",
+        "        elif dap > int(k):\n",
+        "            dap = int(k)\n",
         "    else:\n",
         "        pass\n",
         "print(dap)"
