--- a/baekjoon_10816_try_2_inspection.ipynb
+++ b/baekjoon_10816_try_2_inspection.ipynb
@@ -17,11 +17,206 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "IuFbMrZqyjeA"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IuFbMrZqyjeA",
+        "outputId": "ba2e018f-4858-46ad-e044-645dd4ba83d1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "6 3 2 10 10 10 -10 -10 7 3\n",
+            "8\n",
+            "10 9 -5 2 3 4 5 -10\n",
+            "\n",
+            "R_left: 5\n",
+            "R_right: 9\n",
+            "R_inp: [-10, -10, 2, 3, 3, 6, 7, 10, 10, 10]\n",
+            "\n",
+            "\n",
+            "b_left: 5\n",
+            "b_right: 9\n",
+            "b_inp: [-10, -10, 2, 3, 3, 6, 7, 10, 10, 10]\n",
+            "a_left: 0\n",
+            "a_right: 8\n",
+            "a_inp: [-10, -10, 2, 3, 3, 6, 7, 10, 10]\n",
+            "\n",
+            "\n",
+            "R_left: 5\n",
+            "R_right: 8\n",
+            "R_inp: [-10, -10, 2, 3, 3, 6, 7, 10, 10]\n",
+            "\n",
+            "\n",
+            "R_left: 7\n",
+            "R_right: 8\n",
+            "R_inp: [-10, -10, 2, 3, 3, 6, 7, 10, 10]\n",
+            "\n",
+            "\n",
+            "b_left: 7\n",
+            "b_right: 8\n",
+            "b_inp: [-10, -10, 2, 3, 3, 6, 7, 10, 10]\n",
+            "a_left: 0\n",
+            "a_right: 7\n",
+            "a_inp: [-10, -10, 2, 3, 3, 6, 7, 10]\n",
+            "\n",
+            "\n",
+            "R_left: 4\n",
+            "R_right: 7\n",
+            "R_inp: [-10, -10, 2, 3, 3, 6, 7, 10]\n",
+            "\n",
+            "\n",
+            "R_left: 6\n",
+            "R_right: 7\n",
+            "R_inp: [-10, -10, 2, 3, 3, 6, 7, 10]\n",
+            "\n",
+            "\n",
+            "R_left: 7\n",
+            "R_right: 7\n",
+            "R_inp: [-10, -10, 2, 3, 3, 6, 7, 10]\n",
+            "\n",
+            "\n",
+            "b_left: 7\n",
+            "b_right: 7\n",
+            "b_inp: [-10, -10, 2, 3, 3, 6, 7, 10]\n",
+            "a_left: 0\n",
+            "a_right: 6\n",
+            "a_inp: [-10, -10, 2, 3, 3, 6, 7]\n",
+            "\n",
+            "3 \n",
+            "R_left: 4\n",
+            "R_right: 6\n",
+            "R_inp: [-10, -10, 2, 3, 3, 6, 7]\n",
+            "\n",
+            "\n",
+            "R_left: 6\n",
+            "R_right: 6\n",
+            "R_inp: [-10, -10, 2, 3, 3, 6, 7]\n",
+            "\n",
+            "\n",
+            "R_left: 7\n",
+            "R_right: 6\n",
+            "R_inp: [-10, -10, 2, 3, 3, 6, 7]\n",
+            "\n",
+            "\n",
+            "E_left: 7\n",
+            "E_right: 6\n",
+            "E_inp: [-10, -10, 2, 3, 3, 6, 7]\n",
+            "\n",
+            "0 \n",
+            "L_left: 0\n",
+            "L_right: 2\n",
+            "L_inp: [-10, -10, 2, 3, 3, 6, 7]\n",
+            "\n",
+            "\n",
+            "R_left: 2\n",
+            "R_right: 2\n",
+            "R_inp: [-10, -10, 2, 3, 3, 6, 7]\n",
+            "\n",
+            "\n",
+            "L_left: 2\n",
+            "L_right: 1\n",
+            "L_inp: [-10, -10, 2, 3, 3, 6, 7]\n",
+            "\n",
+            "\n",
+            "E_left: 2\n",
+            "E_right: 1\n",
+            "E_inp: [-10, -10, 2, 3, 3, 6, 7]\n",
+            "\n",
+            "0 \n",
+            "L_left: 0\n",
+            "L_right: 2\n",
+            "L_inp: [-10, -10, 2, 3, 3, 6, 7]\n",
+            "\n",
+            "\n",
+            "R_left: 2\n",
+            "R_right: 2\n",
+            "R_inp: [-10, -10, 2, 3, 3, 6, 7]\n",
+            "\n",
+            "\n",
+            "b_left: 2\n",
+            "b_right: 2\n",
+            "b_inp: [-10, -10, 2, 3, 3, 6, 7]\n",
+            "a_left: 0\n",
+            "a_right: 5\n",
+            "a_inp: [-10, -10, 3, 3, 6, 7]\n",
+            "\n",
+            "1 \n",
+            "b_left: 0\n",
+            "b_right: 5\n",
+            "b_inp: [-10, -10, 3, 3, 6, 7]\n",
+            "a_left: 0\n",
+            "a_right: 4\n",
+            "a_inp: [-10, -10, 3, 6, 7]\n",
+            "\n",
+            "\n",
+            "b_left: 0\n",
+            "b_right: 4\n",
+            "b_inp: [-10, -10, 3, 6, 7]\n",
+            "a_left: 0\n",
+            "a_right: 3\n",
+            "a_inp: [-10, -10, 6, 7]\n",
+            "\n",
+            "2 \n",
+            "R_left: 2\n",
+            "R_right: 3\n",
+            "R_inp: [-10, -10, 6, 7]\n",
+            "\n",
+            "\n",
+            "L_left: 2\n",
+            "L_right: 1\n",
+            "L_inp: [-10, -10, 6, 7]\n",
+            "\n",
+            "\n",
+            "E_left: 2\n",
+            "E_right: 1\n",
+            "E_inp: [-10, -10, 6, 7]\n",
+            "\n",
+            "0 \n",
+            "R_left: 2\n",
+            "R_right: 3\n",
+            "R_inp: [-10, -10, 6, 7]\n",
+            "\n",
+            "\n",
+            "L_left: 2\n",
+            "L_right: 1\n",
+            "L_inp: [-10, -10, 6, 7]\n",
+            "\n",
+            "\n",
+            "E_left: 2\n",
+            "E_right: 1\n",
+            "E_inp: [-10, -10, 6, 7]\n",
+            "\n",
+            "0 \n",
+            "b_left: 0\n",
+            "b_right: 3\n",
+            "b_inp: [-10, -10, 6, 7]\n",
+            "a_left: 0\n",
+            "a_right: 2\n",
+            "a_inp: [-10, 6, 7]\n",
+            "\n",
+            "\n",
+            "L_left: 0\n",
+            "L_right: 0\n",
+            "L_inp: [-10, 6, 7]\n",
+            "\n",
+            "\n",
+            "b_left: 0\n",
+            "b_right: 0\n",
+            "b_inp: [-10, 6, 7]\n",
+            "a_left: 0\n",
+            "a_right: 1\n",
+            "a_inp: [6, 7]\n",
+            "\n",
+            "2 "
+          ]
+        }
+      ],
       "source": [
         "def binary(result,inp, tar, left, right):\n",
         "    median = (left + right)//2\n",
