--- a/baekjoon_1406_try_1.ipynb
+++ b/baekjoon_1406_try_1.ipynb
@@ -17,13 +17,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ncc7AfbA4rCy",
-        "outputId": "2584abbb-00df-4e09-d5b9-fee1e0b49c80"
+        "outputId": "18bb4083-139f-410a-b4ef-8942b050685f"
       },
       "outputs": [
         {
@@ -43,7 +43,7 @@
         "i = str(input())\n",
         "inp = list(i)\n",
         "rep = int(input())\n",
-        "curs = len(inp) + 1\n",
+        "curs = len(inp)\n",
         "for _ in range(rep):\n",
         "    x = input().split()\n",
         "    if len(x) == 2:\n",
@@ -52,12 +52,14 @@
         "    else :\n",
         "        cm = x\n",
         "    if cm == 'P':\n",
-        "        if curs==(len(inp)+1):\n",
+        "        if curs==(len(inp)):\n",
         "            inp.append(st)\n",
+        "            curs = curs + 1\n",
         "        else:\n",
         "            inp.insert(curs, st)\n",
+        "            curs = curs + 1\n",
         "    elif cm == 'D':\n",
-        "        if curs == (len(inp) + 1):\n",
+        "        if curs == (len(inp)):\n",
         "            pass\n",
         "        else:\n",
         "            curs = curs + 1\n",
@@ -66,6 +68,7 @@
         "            pass\n",
         "        else:\n",
         "            inp.remove(curs-1)\n",
+        "            curs = curs - 1\n",
         "    elif cm == 'L':\n",
         "        if curs == 0:\n",
         "            pass\n",
