--- a/baekjoon_10866_try_1.ipynb
+++ b/baekjoon_10866_try_1.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "baekjoon_10866_try_1.ipynb",
+      "name": "baekjoon_11866_try_1.ipynb",
       "provenance": []
     },
     "kernelspec": {
@@ -17,81 +17,45 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "j_SJjlWX8pH1",
-        "outputId": "f5a5eb05-23dc-4103-d7ec-a00e387d7c01"
+        "id": "hDZ59f8MWTDq",
+        "outputId": "35bb7a3f-1b75-4d42-9f4b-759523bd958a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2\n",
-            "1\n",
-            "2\n",
-            "0\n",
-            "2\n",
-            "1\n",
-            "-1\n",
-            "0\n",
-            "1\n",
-            "-1\n",
-            "0\n",
-            "3\n"
+            "7 3\n",
+            "<3, 6, 2, 7, 5, 1, 4>\n"
           ]
         }
       ],
       "source": [
-        "from collections import deque\n",
-        "\n",
-        "#ls = ['push_back 1','push_front 2','front','back','size','empty','pop_front','pop_back','pop_front','size','empty','pop_back','push_front 3','empty','front']\n",
-        "rep = int(input())\n",
-        "que = deque()\n",
-        "for t in range(rep):\n",
-        "    cm=list(input().split())\n",
-        "    if len(cm) == 2:\n",
-        "        cm, num = cm[0], cm[1]\n",
+        "num, nth = map(int, input().split())\n",
+        "ls = [x for x in range(1,(num+1))]\n",
+        "result = '<'\n",
+        "nth -= 1\n",
+        "for _ in range(num):\n",
+        "    if len(ls) == 1:\n",
+        "        result += str(ls[0]) + '>'\n",
         "    else:\n",
-        "        cm = cm[0]\n",
-        "    \n",
-        "    if cm == 'push_front':\n",
-        "        que.insert(0,num)\n",
-        "    elif cm == 'push_back':\n",
-        "        que.append(num)\n",
-        "    elif cm == 'pop_front':\n",
-        "        if len(que) == 0:\n",
-        "            print(-1)\n",
-        "        else:\n",
-        "            x = que.popleft()\n",
-        "            print(x)\n",
-        "    elif cm == 'pop_back':\n",
-        "        if len(que) == 0:\n",
-        "            print(-1)\n",
-        "        else:\n",
-        "            x = que.pop()\n",
-        "            print(x)\n",
-        "    elif cm == 'size':\n",
-        "        x = len(que)\n",
-        "        print(x)\n",
-        "    elif cm == 'empty':\n",
-        "        if len(que) == 0:\n",
-        "            print(1)\n",
-        "        else:\n",
-        "            print(0)\n",
-        "    elif cm == 'front':\n",
-        "        if len(que) == 0:\n",
-        "            print(-1)\n",
-        "        else:\n",
-        "            print(que[0])\n",
-        "    elif cm == 'back':\n",
-        "        if len(que) == 0:\n",
-        "            print(-1)\n",
-        "        else:\n",
-        "            print(que[-1])"
+        "        result += str(ls[nth])+', '\n",
+        "    del ls[nth]\n",
+        "    nth += 2\n",
+        "    while nth > len(ls)-1:\n",
+        "        if len(ls) == 0:\n",
+        "            print(result)\n",
+        "            break\n",
+        "        elif len(ls) == 1:\n",
+        "            nth = 0\n",
+        "        elif nth > len(ls)-1:\n",
+        "            nth -= len(ls)\n",
+        "    "
       ]
     }
   ]
